import datetime
from typing import Optional

from django.core.exceptions import ValidationError
from django.core.validators import MinValueValidator, MaxValueValidator
from django.db import models
from django.db.models import CASCADE
from django.utils.translation import gettext_lazy as _

from ampa_manager.charge.receipt import AuthorizationReceipt
from ampa_manager.family.models.authorization.authorization_old_manager import AuthorizationOldManager
from ampa_manager.family.models.authorization.authorization_old_queryset import AuthorizationOldQueryset
from ampa_manager.family.models.bank_account.bank_account import BankAccount
from ampa_manager.family.models.state import State


class AuthorizationOld(models.Model):
    number = models.CharField(max_length=50, verbose_name=_("Number"))
    order = models.IntegerField(validators=[MinValueValidator(1), MaxValueValidator(999)], verbose_name=_("Order"))
    year = models.IntegerField(validators=[MinValueValidator(1000), MaxValueValidator(3000)], verbose_name=_("Year"))
    sign_date = models.DateField(default=datetime.date.today)
    document = models.FileField(null=True, blank=True, upload_to='authorizations/', verbose_name=_("Document"))
    state = models.IntegerField(choices=State.choices, default=State.NOT_SENT, verbose_name=_("State"))
    bank_account = models.OneToOneField(to=BankAccount, on_delete=CASCADE, verbose_name=_("Bank account"))

    objects = AuthorizationOldManager.from_queryset(AuthorizationOldQueryset)()

    class Meta:
        verbose_name = _('AuthorizationOld')
        verbose_name_plural = _("OldAuthorizations")
        db_table = 'authorization_old'
        constraints = [
            models.UniqueConstraint(fields=['number', 'year'], name='unique_number_in_a_year')]

    def __str__(self) -> str:
        return self.full_number + f'-{str(self.bank_account)}'

    def clean(self):
        if self.state == State.SIGNED and not self.document:
            raise ValidationError(_('The state can not be sent or signed if there is no document attached'))

    @property
    def full_number(self) -> str:
        return f'{self.year}/{self.order:03}'

    @classmethod
    def generate_receipt_authorization(cls, bank_account: BankAccount) -> Optional[AuthorizationReceipt]:
        try:
            authorization: AuthorizationOld = AuthorizationOld.objects.of_bank_account(bank_account).get()
            return AuthorizationReceipt(number=authorization.full_number, date=authorization.sign_date)
        except AuthorizationOld.DoesNotExist:
            return None
