# Generated by Django 4.0.6 on 2022-08-25 21:05

import django.core.validators
from django.db import migrations, models
import django.db.models.deletion
import django.utils.timezone
import localflavor.generic.models
import phonenumber_field.modelfields


class Migration(migrations.Migration):

    initial = True

    dependencies = [
    ]

    operations = [
        migrations.CreateModel(
            name='AcademicCourse',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('initial_year', models.IntegerField(unique=True, validators=[django.core.validators.MinValueValidator(1000), django.core.validators.MaxValueValidator(3000)], verbose_name='Initial year')),
                ('fee', models.PositiveIntegerField(blank=True, null=True, verbose_name='Fee')),
            ],
            options={
                'verbose_name': 'Academic course',
                'verbose_name_plural': 'Academic courses',
            },
        ),
        migrations.CreateModel(
            name='Activity',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('name', models.CharField(max_length=100, verbose_name='Name')),
                ('funding', models.IntegerField(choices=[(1, 'No funding'), (2, 'Cultural'), (3, 'Sport')], verbose_name='Funding')),
                ('academic_course', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='ampa_manager.academiccourse', verbose_name='Academic course')),
            ],
            options={
                'verbose_name': 'Activity',
                'verbose_name_plural': 'Activity',
            },
        ),
        migrations.CreateModel(
            name='ActivityPeriod',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('name', models.CharField(max_length=100, verbose_name='Name')),
                ('price_for_member', models.DecimalField(decimal_places=2, max_digits=6, verbose_name='Price for members')),
                ('price_for_no_member', models.DecimalField(decimal_places=2, max_digits=6, verbose_name='Price for no members')),
                ('payment_type', models.IntegerField(choices=[(1, 'Single'), (2, 'Per day'), (3, 'Per week'), (4, 'Per month')], verbose_name='Payment type')),
                ('activity', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='ampa_manager.activity', verbose_name='Activity')),
            ],
            options={
                'verbose_name': 'Activity Period',
                'verbose_name_plural': 'Activity Periods',
            },
        ),
        migrations.CreateModel(
            name='BankAccount',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('swift_bic', localflavor.generic.models.BICField(blank=True, max_length=11, null=True, verbose_name='SWIFT/BIC')),
                ('iban', localflavor.generic.models.IBANField(include_countries=None, max_length=34, unique=True, use_nordea_extensions=False, verbose_name='IBAN')),
            ],
            options={
                'verbose_name': 'Bank account',
                'verbose_name_plural': 'Bank accounts',
                'ordering': ['owner', 'iban'],
            },
        ),
        migrations.CreateModel(
            name='Family',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('surnames', models.CharField(max_length=500, verbose_name='Surnames')),
                ('email', models.EmailField(max_length=254, unique=True, verbose_name='Email')),
                ('secondary_email', models.EmailField(blank=True, max_length=254, null=True, verbose_name='Secondary Email')),
                ('default_bank_account', models.ForeignKey(blank=True, help_text='Save the family to see its bank accounts', null=True, on_delete=django.db.models.deletion.SET_NULL, to='ampa_manager.bankaccount', verbose_name='Default bank account')),
            ],
            options={
                'verbose_name': 'Family',
                'verbose_name_plural': 'Families',
            },
        ),
        migrations.CreateModel(
            name='Parent',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('name_and_surnames', models.CharField(max_length=500, unique=True, verbose_name='Name and surnames')),
                ('phone_number', phonenumber_field.modelfields.PhoneNumberField(max_length=128, region=None, verbose_name='Phone number')),
                ('additional_phone_number', phonenumber_field.modelfields.PhoneNumberField(blank=True, max_length=128, null=True, region=None, verbose_name='Additional phone number')),
            ],
            options={
                'verbose_name': 'Parent',
                'verbose_name_plural': 'Parents',
            },
        ),
        migrations.CreateModel(
            name='MembershipRemittance',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('identifier', models.CharField(blank=True, max_length=40, null=True, verbose_name='Identifier')),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('course', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='ampa_manager.academiccourse', verbose_name='AcademicCourse')),
            ],
            options={
                'verbose_name': 'Membership remittance',
                'verbose_name_plural': 'Membership remittances',
            },
        ),
        migrations.CreateModel(
            name='MembershipReceipt',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('state', models.IntegerField(choices=[(1, 'Created'), (2, 'Sent'), (3, 'Paid')], default=1, verbose_name='State')),
                ('family', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='ampa_manager.family', verbose_name='Family')),
                ('remittance', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='ampa_manager.membershipremittance', verbose_name='Membership Remittance')),
            ],
            options={
                'verbose_name': 'Membership receipt',
                'verbose_name_plural': 'Membership receipts',
            },
        ),
        migrations.CreateModel(
            name='Membership',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('academic_course', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='ampa_manager.academiccourse', verbose_name='Academic course')),
                ('family', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='ampa_manager.family', verbose_name='Family')),
            ],
            options={
                'verbose_name': 'Membership',
                'verbose_name_plural': 'Membership',
            },
        ),
        migrations.AddField(
            model_name='family',
            name='parents',
            field=models.ManyToManyField(to='ampa_manager.parent', verbose_name='Parents'),
        ),
        migrations.CreateModel(
            name='Child',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('name', models.CharField(max_length=500, verbose_name='Name')),
                ('year_of_birth', models.IntegerField(validators=[django.core.validators.MinValueValidator(1000), django.core.validators.MaxValueValidator(3000)], verbose_name='Year of birth')),
                ('repetition', models.IntegerField(default=0, verbose_name='Repetition')),
                ('family', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='ampa_manager.family', verbose_name='Family')),
            ],
            options={
                'verbose_name': 'Child',
                'verbose_name_plural': 'Children',
            },
        ),
        migrations.AddField(
            model_name='bankaccount',
            name='owner',
            field=models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='ampa_manager.parent', verbose_name='Owner'),
        ),
        migrations.CreateModel(
            name='Authorization',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('number', models.CharField(max_length=50, verbose_name='Number')),
                ('year', models.IntegerField(validators=[django.core.validators.MinValueValidator(1000), django.core.validators.MaxValueValidator(3000)], verbose_name='Year')),
                ('date', models.DateField(default=django.utils.timezone.now)),
                ('document', models.FileField(blank=True, null=True, upload_to='authorizations/', verbose_name='Document')),
                ('state', models.IntegerField(choices=[(1, 'Created'), (2, 'Sent'), (3, 'Paid')], default=1, verbose_name='State')),
                ('bank_account', models.OneToOneField(on_delete=django.db.models.deletion.CASCADE, to='ampa_manager.bankaccount', verbose_name='Bank account')),
            ],
            options={
                'verbose_name': 'Authorization',
                'verbose_name_plural': 'Authorizations',
            },
        ),
        migrations.CreateModel(
            name='ActivityRemittance',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('name', models.CharField(max_length=300, verbose_name='Name')),
                ('identifier', models.CharField(blank=True, max_length=40, null=True, verbose_name='Identifier')),
                ('created_at', models.DateTimeField(auto_now_add=True, verbose_name='Created at')),
                ('activity_periods', models.ManyToManyField(to='ampa_manager.activityperiod', verbose_name='Activity periods')),
            ],
            options={
                'verbose_name': 'Activity remittance',
                'verbose_name_plural': 'Activity remittances',
            },
        ),
        migrations.CreateModel(
            name='ActivityRegistration',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('amount', models.FloatField(default=0.0, verbose_name='Amount')),
                ('activity_period', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='ampa_manager.activityperiod', verbose_name='Activity period')),
                ('bank_account', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='ampa_manager.bankaccount', verbose_name='Bank account')),
                ('child', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='ampa_manager.child', verbose_name='Child')),
            ],
            options={
                'verbose_name': 'Activity registration',
                'verbose_name_plural': 'Activity registrations',
            },
        ),
        migrations.CreateModel(
            name='ActivityReceipt',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('amount', models.FloatField(blank=True, null=True, verbose_name='Amount')),
                ('state', models.IntegerField(choices=[(1, 'Created'), (2, 'Sent'), (3, 'Paid')], default=1, verbose_name='State')),
                ('activity_registrations', models.ManyToManyField(to='ampa_manager.activityregistration', verbose_name='Activity registrations')),
                ('remittance', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='ampa_manager.activityremittance', verbose_name='Activity remittance')),
            ],
            options={
                'verbose_name': 'Activity Receipt',
                'verbose_name_plural': 'Activity Receipts',
            },
        ),
        migrations.CreateModel(
            name='ActiveCourse',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('course', models.ForeignKey(null=True, on_delete=django.db.models.deletion.SET_NULL, to='ampa_manager.academiccourse', verbose_name='Course')),
            ],
            options={
                'verbose_name': 'Active course',
                'verbose_name_plural': 'Active course',
            },
        ),
        migrations.AddConstraint(
            model_name='child',
            constraint=models.UniqueConstraint(fields=('name', 'family'), name='unique_child_name_in_a_family'),
        ),
        migrations.AddConstraint(
            model_name='authorization',
            constraint=models.UniqueConstraint(fields=('number', 'year'), name='unique_number_in_a_year'),
        ),
    ]
