@startuml
package Family {
  class Family {
    surnames : String
    decline_membership : Boolean
  }
  class Parent {
    name_and_surnames : String
    phone_number: Integer
    additional_phone_number: Integer
    email: String
  }
  class Child {
    name : String
    year_of_birth : Integer
    repetition : Integer
  }
  class Holder {
      number: String
      year: Integer
      sign_date: Date
      document: File
  }
  class BankAccount {
    swift_bic : String
    iban : String
  }
  class AuthorizationOld {
    number: String
    year: Integer
    sign_date: Date
    document: File
  }
  class State
  class NotSent
  class Sent
  class Signed

  NotSent -up-|> State
  Sent -up-|> State
  Signed -up-|> State
  Holder *-right- State
  AuthorizationOld *-right- State

  class Membership
  Parent --o Holder: ""
  Holder o-- BankAccount
  Family o-- Holder


  Family "1..N" o-- "1..N" Parent
  Family *-- "N" Child
  BankAccount "1" *-- "1" AuthorizationOld
  Family *-- "N" Membership: ""
  Membership o-- AcademicCourse
}

package AcademicCourse {
  class AcademicCourse {
    initial_year: Integer
  }
}
@enduml
